[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/screen/Windows_Screen.png" type="Texture" id=1]
[ext_resource path="res://src/screen/icons/Logout.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/screen/Screen.gd" type="Script" id=3]
[ext_resource path="res://src/screen/windows/Calendar.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/screen/icons/ToVideo.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/screen/icons/ToCalendar.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/theme/Screen.tres" type="Theme" id=7]
[ext_resource path="res://src/screen/icons/ToInbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/screen/windows/Inbox.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/screen/windows/CCTV.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/screen/windows/Alert.tscn" type="PackedScene" id=11]

[node name="Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="ToInbox" parent="." instance=ExtResource( 8 )]
margin_left = 87.0
margin_top = 64.0
margin_right = 119.0
margin_bottom = 96.0

[node name="ToVideo" parent="." instance=ExtResource( 5 )]
margin_left = 86.0
margin_top = 144.0
margin_right = 118.0
margin_bottom = 176.0

[node name="ToCalendar" parent="." instance=ExtResource( 6 )]
margin_left = 84.0
margin_top = 216.0
margin_right = 116.0
margin_bottom = 248.0

[node name="Logout" parent="." instance=ExtResource( 2 )]
margin_left = 533.0
margin_top = 297.0
margin_right = 565.0
margin_bottom = 329.0

[node name="UserID" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0.313726 )
margin_left = 60.0
margin_top = 332.0
margin_right = 370.0
margin_bottom = 351.0
text = "Logged in as: Remote Connection"

[node name="CCTV" parent="." instance=ExtResource( 10 )]
visible = false

[node name="Calendar" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Inbox" parent="." instance=ExtResource( 9 )]
visible = false
margin_top = 47.0
margin_bottom = 353.0

[node name="Alert" parent="." instance=ExtResource( 11 )]
visible = false

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="icon_pressed" from="ToInbox" to="." method="_on_ToInbox_icon_pressed"]
[connection signal="pressed" from="ToVideo" to="." method="_on_ToVideo_pressed"]
[connection signal="icon_pressed" from="ToCalendar" to="." method="_on_ToCalendar_icon_pressed"]
[connection signal="icon_pressed" from="Logout" to="." method="_on_Logout_icon_pressed"]
[connection signal="camera_used" from="CCTV" to="." method="_on_CCTV_camera_used"]
[connection signal="new_message" from="Inbox/Messages" to="." method="_on_Messages_new_message"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Inbox"]
